Department Master Changes

--- a/backend/GatewayMS/src/main/resources/application.properties
+++ b/backend/GatewayMS/src/main/resources/application.properties
@@ -29,6 +29,6 @@ spring.cloud.gateway.routes[2].filters[0]=TokenFilter
 #MasterMS
 spring.cloud.gateway.routes[3].id=MasterMS
 spring.cloud.gateway.routes[3].uri=http://localhost:8084
-spring.cloud.gateway.routes[3].predicates[0]=Path=/mater/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/master/**
 spring.cloud.gateway.routes[3].filters[0]=TokenFilter
 
